--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -9,7 +9,7 @@
     android:gravity="center">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvWelcome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Welcome to Animease"
@@ -18,7 +18,7 @@
         android:layout_marginBottom="50dp"/>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnLogin"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:text="LOGIN"
@@ -26,13 +26,14 @@
         />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnRegister"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:text="REGISTER"
         android:layout_marginTop="10dp"/>
 
     <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lavAuth"
         android:layout_marginTop="10dp"
         android:layout_width="400dp"
         android:layout_height="300dp"
