--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Welcome to Animease"
+        android:visibility="invisible"
         android:gravity="center"
         android:textSize="30dp"
         android:layout_marginBottom="50dp"/>
@@ -22,6 +23,7 @@
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:text="LOGIN"
+        android:visibility="invisible"
         android:layout_marginBottom="10dp"
         />
 
@@ -30,9 +32,11 @@
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:text="REGISTER"
+        android:visibility="invisible"
         android:layout_marginTop="10dp"/>
 
     <com.airbnb.lottie.LottieAnimationView
+        android:visibility="invisible"
         android:id="@+id/lavAuth"
         android:layout_marginTop="10dp"
         android:layout_width="400dp"
