--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -19,7 +19,7 @@
         android:layout_marginBottom="50dp"/>
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnAuthLogin"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:text="LOGIN"
@@ -28,7 +28,7 @@
         />
 
     <Button
-        android:id="@+id/btnRegister"
+        android:id="@+id/btnAuthRegister"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:text="REGISTER"
