--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,9 +9,28 @@
     android:gravity="center">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvHomeAnimease"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="this is the home activity"
-        android:textSize="20dp"/>
+        android:text="Animease"
+        android:textSize="40dp"
+        android:layout_marginBottom="30dp"/>
+
+    <Button
+        android:id="@+id/btnHomeProjects"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Projects" />
+
+    <Button
+        android:id="@+id/btnHomeDrawStudio"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Draw Studio" />
+
+    <Button
+        android:id="@+id/btnHomeHowToUse"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="How To Use" />
 </LinearLayout>
