--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,18 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_green_gray">#283618</color>
+    <color name="light_gray_green">#B7B7A4</color>
+    <color name="soft_gray">#D4D4D4</color>
+    <color name="off_white">#F0EFEB</color>
+
+    <color name="vibrant_mint">#00FFAB</color>
+    <color name="dark_mint">#14C38E</color>
+    <color name="light_mint">#B8F1B0</color>
+    <color name="white_green">#E3FCBF</color>
+
+    <color name="dark_purple">#393646</color>
+    <color name="purple">#4F4557</color>
+    <color name="light_purple">#6D5D6E</color>
+    <color name="white_purple">#F4EEE0</color>
 </resources>
