--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
-    tools:context=".HomeActivity"
-    android:gravity="center">
+    tools:context=".HomeActivity">
 
     <TextView
         android:id="@+id/tvHomeAnimease"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
         android:text="Animease"
-        android:textSize="40dp"
-        android:layout_marginBottom="30dp"/>
+        android:textSize="40dp" />
 
     <Button
         android:id="@+id/btnHomeProjects"
