--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,9 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.AnimeaseApp001" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/purple</item>
-        <item name="colorPrimaryDark">@color/dark_purple</item>
+        <item name="colorPrimary">@color/white_purple</item>
+        <item name="colorPrimaryDark">@color/purple</item>
         <item name="colorAccent">@color/light_purple</item>
-        <item name="android:windowBackground">@color/white_purple</item>
+        <item name="android:textColor">@color/white_purple</item>
+        <item name="android:textColorPrimary">@color/white_purple</item>
+        <item name="android:windowBackground">@color/light_purple</item>
     </style>
 </resources>
