--- a/app/src/main/res/layout/activity_project_create.xml
+++ b/app/src/main/res/layout/activity_project_create.xml
@@ -58,7 +58,7 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginStart="15dp"
-            android:src="@drawable/selectIcon" />
+            android:src="@drawable/select_icon" />
 
     </LinearLayout>
 
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:ems="13"
         android:inputType="text"
-        android:text="00:00:00" />
+        android:text="" />
 
     <Button
         android:id="@+id/btnCreateProject"
