--- a/app/src/main/res/layout/activity_project_create.xml
+++ b/app/src/main/res/layout/activity_project_create.xml
@@ -26,25 +26,63 @@
         android:inputType="text"
         android:hint="Project Name" />
 
-    <Spinner
-        android:id="@+id/spinnerResolution"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="5dp"
+    <EditText
+        android:id="@+id/etProjectDuration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:ems="13"
+        android:hint="Project Duration (hh:mm:ss)"
+        android:inputType="text"
         />
 
-    <Spinner
-        android:id="@+id/spinnerFramerate"
-        android:layout_marginBottom="10dp"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/tvResolution"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Resolution"
+            android:textSize="20dp"
+            android:layout_marginRight="20dp"/>
+
+        <Spinner
+            android:id="@+id/spinnerResolution"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/tvFramerate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="25dp"
+            android:textSize="20dp"
+            android:text="Framerate" />
+
+        <Spinner
+            android:id="@+id/spinnerFramerate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="10dp"
+        >
 
         <TextView
             android:id="@+id/tvBackgroundImage"
@@ -61,15 +99,6 @@
             android:src="@drawable/select_icon" />
 
     </LinearLayout>
-
-    <EditText
-        android:id="@+id/etProjectDuration"
-        android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="13"
-        android:inputType="text"
-        android:text="" />
 
     <Button
         android:id="@+id/btnCreateProject"
